simple quick css styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,207 @@
 ---
+import Body from "@layouts/Body.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Body title="Astro">
+    <article class="wrapper flow">
+        <h1>Aut nostrum dolor non consectetur sunt et dicta atque.</h1><p>
+            Lorem ipsum dolor sit amet. Est explicabo odit hic libero quiaet
+            quidem. Qui eaque explicabo eos consequatur nostrumad veritatis et
+            rerum tenetur. Eos quisquam dolores <a
+                href="https://www.loremipzum.com"
+                target="_blank"
+                >Qui iusto qui doloremque nobis nam tempore adipisci</a
+            > est consectetur aliquam ab laboriosam temporibus. Qui quis quisquamNam
+            fugiat ab reiciendis consectetur sit asperiores voluptate ea deleniti
+            omnis. Et dolor consequuntur <em
+                >Et dolorum aut beatae consequatur est nostrum incidunt</em
+            > nam libero iste et explicabo dolores! In dolor rerum ut dolor velitUt
+            omnis eos voluptatem culpa qui maiores quasi et quibusdam mollitia. Sit
+            modi voluptas non temporibus isteEt internos est quis itaque. Quo quis
+            liberoSit illo sed nobis accusantium?
+        </p><h2>Qui reiciendis dolores aut itaque neque.</h2><p>
+            Hic delectus cumque ad quia suntEa eaque sit expedita recusandae qui
+            harum quisquam ut maxime delectus. Qui repellat maiores <em
+                >Ex inventore est perferendis quam qui laudantium quis</em
+            >. Et porro autem sed eius molestiaevel voluptatem. Aut voluptatibus
+            ipsa id veritatis nostrumquo tempora qui ipsum voluptatem. Sed
+            blanditiis voluptatum vel laudantium doloreQui pariatur qui libero
+            facere ut asperiores eaque et quis soluta! Non voluptas maiores est
+            rerum doloresSit facilis. Et ullam optio ea facilis quosEt itaque et
+            omnis esse. Est odit similique aut dolore placeatVel commodi aut
+            dolor fuga qui dolorem dolor ut deleniti velit a illum sapiente. Ab
+            voluptatem voluptatemAut incidunt et dolorem cupiditate aut
+            laudantium suscipit et placeat autem hic autem quos et obcaecati
+            dolore. Nam laboriosam repellat ut adipisci enim <strong
+                >Quo perspiciatis cum rerum molestiae</strong
+            > sed nesciunt sequi quo doloremque dolorum est consequatur galisum.
+            Cum veritatis obcaecati in molestiae vero <a
+                href="https://www.loremipzum.com"
+                target="_blank"
+                >Id fugit et omnis tenetur ut voluptas obcaecati et alias
+                exercitationem</a
+            >. Ut ratione galisumEst porro sit tenetur laudantium eos repellat
+            iure. Et eius consequatur non aspernatur liberoAut inventore nam
+            expedita maiores et sapiente rerum et modi repellat qui repudiandae
+            similique. Est fugit aliquid a vitae quiavel voluptatum eos sunt
+            quia cum cumque magni.
+        </p><h3>Sed quisquam omnis ab vero alias non iste provident.</h3><p>
+            Qui eligendi velitRem rerum in perspiciatis magnam non quos quisquam
+            aut quaerat eligendi ut amet cupiditate et corporis laborum. Eum
+            repellendus impeditQuo odio ea reiciendis omnis qui eaque dolores
+            qui ipsa provident rem aliquam cumque. Sit quos recusandae et
+            excepturi obcaecatihic modi et reiciendis facilis sed ipsa
+            consequatur? Et quia voluptasEx animi est fugiat beatae qui quia
+            ducimus ex ipsum cupiditate qui impedit rerum. Qui officia liberoUt
+            galisum nam maiores architecto in error labore vel odit cumque sit
+            nulla voluptatem. Qui aspernatur iste <a
+                href="https://www.loremipzum.com"
+                target="_blank">Ut Quis et itaque optio sed placeat quos</a
+            > est praesentium voluptatem. Est nostrum porroEt dolore in nobis quia
+            quo odio ducimus id voluptas labore non consequuntur magnam. Qui galisum
+            inventore qui labore rationeQui fugiat id autem eaque sed consequatur
+            expedita. Aut cupiditate sunt aut mollitia voluptasrem consequatur qui
+            excepturi tenetur. Eum nihil doloresEa optio id veritatis quis est consequatur
+            itaque sit fugiat atque aut voluptates culpa et dicta quia! Ea fuga sunt
+            sit fuga veritatisVel omnis vel fugit fugiat? Et nulla fuga eum quod
+            esseEt tempora non optio dolorem ea quia ipsum sit numquam consequuntur.
+            Aut perferendis aliasEos dolore sit autem nihil. Et laborum delectus
+            ad voluptatem solutaNon blanditiis et itaque omnis qui autem tenetur
+            et internos ipsam.
+        </p><h4>
+            Sit animi veritatis aut totam possimus et aliquid voluptas.
+        </h4><p>
+            Vel vitae Quis aut earum rationeAut dicta? Sit quasi nostrum id quae
+            molestiaeSit natus aut voluptatem galisum est eaque laboriosam. Ut
+            quasi libero <strong
+                >Sed voluptatem ut rerum totam ut autem repellendus</strong
+            >. Est necessitatibus eius <em
+                >Sed tenetur a veritatis voluptatem in veniam facilis et esse
+                Quis</em
+            > ut galisum ducimus et unde necessitatibus! Rem obcaecati voluptasEst
+            dignissimos in aperiam voluptatem et esse amet eos dolor galisum sed
+            voluptas necessitatibus. Aut autem dolorem non natus laboriosamAb voluptates.
+            Et dolorem assumenda et laborum iustoAt consequuntur et harum iure ut
+            temporibus obcaecati qui Quis dolorum. Sed illum maiores eos rerum enimQui
+            adipisci non maiores natus ex eligendi autem et dolores tempore! Est
+            nisi assumendaEt modi aut incidunt voluptas? Non dolorem architectoEum
+            nulla id consequatur perspiciatis eos nostrum velit cum ipsam recusandae
+            non praesentium adipisci. Qui vitae eveniet <a
+                href="https://www.loremipzum.com"
+                target="_blank"
+                >Ex saepe qui exercitationem natus qui eligendi alias</a
+            > non vero minus sit facere dolores?
+        </p><blockquote cite="https://www.loremipzum.com">
+            Et eius pariatur non ratione cumque 33 autem dolores est sapiente
+            facilis in vitae perspiciatis.
+        </blockquote><h5>Quo voluptatibus provident est explicabo dolore.</h5><p
+        >
+            Ex quam teneturId mollitia et pariatur earum qui reiciendis
+            possimus. Quo nemo oditEt veritatis qui ullam debitis cum laborum
+            modi. Non ipsum repellat aut tempora nihilEt doloribus. Ut velit
+            consequuntur quo iste rationenon dignissimos id blanditiis nostrum
+            id voluptate veniam. Ut ipsa consequuntur <a
+                href="https://www.loremipzum.com"
+                target="_blank"
+                >Id tempora aut voluptatem blanditiis aut sunt dolor</a
+            > quo quia sunt et autem natus. Sit deserunt voluptatem et quasi rerumQuo
+            incidunt qui voluptate iste qui illo similique qui laboriosam officiis
+            in earum laborum. Qui accusamus autem ea reprehenderit doloremqueEt velit.
+            Ea excepturi rerum eos magni minima <em>Sit eveniet</em>.
+        </p><ul>
+            <li>Rem ipsum pariatur non quae iste aut laboriosam iste.</li><li>
+                Sit porro amet id nisi velit.
+            </li>
+        </ul><p>
+            Vel molestiae saepe et dolorem illoin totam eos velit voluptas ea
+            dolores enim. At illo accusamus est illum odioQuo quisquam qui omnis
+            deleniti et quibusdam quae vel cupiditate perspiciatis aut expedita
+            omnis. Ut quidem velit sit sequi debitisEt eius sed enim dolores et
+            fuga nemo a veritatis nostrum cum beatae consequatur? Ea incidunt
+            modiCum doloribus aut suscipit recusandae aut voluptatem quas qui
+            perspiciatis neque. Vel amet quasi qui fuga doloremin eius. Ut
+            distinctio asperiores est similique cumqueest quia. At quibusdam
+            accusantiumEum illo id quas assumenda et consectetur veritatis et
+            aperiam perspiciatis est quidem quia est beatae quaerat? Qui labore
+            necessitatibus <strong
+                >Et quia ut quasi nulla ut nobis consectetur</strong
+            > vel tempore illum ab dolorum mollitia? Et velit doloribus aut amet
+            magniQui accusamus in earum facere ut consequatur amet ad ipsa internos
+            est natus iusto. Et repellendus optio et unde ducimusQui facere eum quod
+            enim. Quo fuga enim <em
+                >Aut illo non ipsum obcaecati nam molestias quas</em
+            > sit blanditiis rerum qui velit molestiae et neque omnis.
+        </p><p>
+            Eos quia fuga <em>Ut suscipit et sint sunt qui ipsa corrupti</em> sed
+            sunt accusamus eos architecto quae. Qui consequuntur voluptasAut dignissimos
+            aut saepe repudiandae ut molestiae voluptatem. Est voluptatem voluptas
+            <strong
+                >Et omnis non dicta praesentium in rerum quia ut voluptas
+                officiis</strong
+            > ex dolorem voluptas id dicta doloremque. Non consequatur distinctio
+            nam consequatur voluptatemVel blanditiis est laudantium porro et aliquid
+            dolor id nemo accusamus. Et dolor quodAd aperiam ut nisi vitae aut quisquam
+            officiis eos consequatur suscipit nam quaerat dolorum non perferendis
+            omnis. Non earum voluptatemQui laborum ut quisquam ratione. Et suscipit
+            aliquid et galisum nemoUt magni id porro beatae rem magni nisi qui nihil
+            impedit. In cupiditate placeatEt expedita ex eveniet debitis in quisquam
+            amet et provident dolores ea ducimus vero et quia numquam.
+        </p><p>
+            Qui pariatur quiain internos non galisum recusandae. Ea galisum quia
+            ut quia veniamEt architecto sit sequi nobis ut quia consequatur et
+            maxime recusandae. Id velit ametUt quis ad dolores illum sit illum
+            debitis et pariatur dolor. Aut consequatur doloremque est
+            consequatur liberoUt pariatur? Id dolorem itaque <a
+                href="https://www.loremipzum.com"
+                target="_blank"
+                >Rem voluptatibus ut nemo dolore qui labore consequatur</a
+            > nam accusamus odit id enim culpa. Et beatae numquam aut ratione quas
+            <strong
+                >Ad voluptates non tempore consequatur aut maxime possimus non
+                velit dolores</strong
+            > aut odit perferendis. Aut sint magnam aut quia molestiasQui repudiandae
+            et nesciunt mollitia est quia atque. Eos voluptatem culpaSed ratione
+            hic voluptatem nesciunt quo error cupiditate vel totam dolorum. Eum porro
+            dicta qui fugiat voluptatemEt suscipit non dolor aliquid. Et sunt iste
+            <em>Vel dolorem non dolorem nulla qui cumque atque</em>. Est facilis
+            rerumsed asperiores ut quas consequatur? Et internos expedita eum
+            reprehenderit praesentiumSed quia aut debitis sunt. Et corrupti
+            sintAut adipisci qui nostrum aliquid. Ea sunt veritatis et illo
+            nisiid voluptatem.
+        </p><p>
+            Id internos dolores qui voluptatem architectoest voluptatem. Et
+            libero vitaeIn velit nam fugit placeat a illo dolorem eos eveniet
+            quisquam ut vitae natus hic dignissimos ratione. Sit quas aliquid
+            aut dignissimos ametut nisi ex quidem reiciendis in voluptatem
+            consequuntur. Eum rerum evenietEt possimus ea omnis quaerat sit iure
+            possimus vel nisi velit! Aut eveniet expedita quo nemo saepe <a
+                href="https://www.loremipzum.com"
+                target="_blank">Id omnis in cupiditate voluptate</a
+            >. Et quis expedita et dolorem cumqueAut dolores aut quas dolorum et
+            necessitatibus autem. Eos praesentium nulla in deserunt mollitiavel
+            illo. Aut maiores voluptates a consequatur consequaturEst porro. Eos
+            mollitia earum sed suscipit doloremqueId nemo et deleniti labore aut
+            voluptas minus ut asperiores dolorem. Eum eligendi placeat <em
+                >Quo culpa ut placeat commodi aut sunt nesciunt</em
+            > ut enim voluptas est incidunt quasi. Non tempore iure <strong
+                >Ut facere qui recusandae dolorem eum ipsam autem</strong
+            > in voluptatem voluptatem et numquam rerum. Est galisum sint ad placeat
+            errorEst ullam. Et accusantium consequuntur ut animi delectusEum suscipit
+            ut nobis necessitatibus id voluptatem laudantium qui vitae dicta sit
+            quas minima. Sed galisum possimus a praesentium doloribusSed nisi cum
+            quia autem eos molestiae voluptatem cum molestiae dolorem ad eveniet
+            veritatis?
+        </p><p>
+            Sed internos enim rem iste praesentiumNam ipsum sed impedit
+            quibusdam est laboriosam Quis. Sed iusto rerum et dolorem mollitia <em
+                >Et nobis qui mollitia velit At laboriosam quis est veniam
+                quidem</em
+            >? Et unde quidem qui praesentium quiset eligendi qui labore veniam.
+            Hic galisum veniam aut nesciunt iustoQui voluptatibus. Ut commodi
+            sapienteEt corrupti hic nulla inventore. 33 explicabo undeAut modi
+            vel aliquid optio et iusto officiis. Ut reiciendis beataeIn corrupti
+            qui quia corporis. Est sunt saepeSit accusantium eum molestiae Quis
+            ab accusantium tempora quo doloribus placeat.
+        </p>
+    </article>
+</Body>
