--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Body from "@layouts/Body.astro";
+import Page from "@layouts/Page.astro";
 ---
 
-<Body title="Astro">
+<Page title="Astro">
     <article class="wrapper flow">
         <h1>Aut nostrum dolor non consectetur sunt et dicta atque.</h1><p>
             Lorem ipsum dolor sit amet. Est explicabo odit hic libero quiaet
@@ -204,4 +204,4 @@ import Body from "@layouts/Body.astro";
             ab accusantium tempora quo doloribus placeat.
         </p>
     </article>
-</Body>
+</Page>
